force-app/main/default/objects/PDRI__TestRun__c/fields/PDRI__StatusDetails__c.field-meta.xml
<CustomField>
    <fullName>PDRI__StatusDetails__c</fullName>
    <label>Status Details</label>
    <type>TextArea</type>
</CustomField>