force-app/main/default/objects/PDRI__TestRun__c/fields/PDRI__TestRunDateTime__c.field-meta.xml
<CustomField>
    <fullName>PDRI__TestRunDateTime__c</fullName>
    <label>Test Run Date/Time</label>
    <type>DateTime</type>
</CustomField>